--- a/conejo/pom.xml
+++ b/conejo/pom.xml
@@ -42,6 +42,11 @@
   			<artifactId>commons-io</artifactId>
   			<version>2.2</version>
   		</dependency>
+  		<dependency>
+  			<groupId>com.agilex.conejo</groupId>
+  			<artifactId>conejo-util</artifactId>
+  			<version>${project.version}</version>
+  		</dependency>
   	</dependencies>
   </dependencyManagement>
 </project>
